--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
 		<meta name="cmsmagazine" content="d8e7426ec72ad3e4ea38b09ebf01284c">
 		<title>Font Family: Rubik</title>
+		<base href="https://nice-studio.github.io/Rubik/">
+		<link rel="shortcut Icon" href="https://nice-studio.github.io/Rubik/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="https://nice-studio.github.io/Rubik/favicon.ico" type="image/x-icon">
 		<meta name="robots" content="index, follow">
 		<meta name="title" content="Font Family: Rubik">
 		<meta name="description" content="Font Family: Rubik">
