--- a/index.html
+++ b/index.html
@@ -77,7 +77,66 @@
   font-weight: 900;
   src: local('Rubik Black'), local('Rubik-Black'), url("dist/fonts/Rubik-Black.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Black.otf") format("opentype"), url("dist/fonts/Rubik-Black.svg") format("svg"), url("dist/fonts/Rubik-Black.ttf") format("truetype"), url("dist/fonts/Rubik-Black.woff") format("woff"), url("dist/fonts/Rubik-Black.woff2") format("woff2");
 }
-			
+			@font-face {
+  font-family: 'Rubik';
+  font-style: italic;
+  font-weight: 300;
+  src: local('Rubik Light Italic'), local('Rubik-LightItalic'), url("dist/fonts/Rubik-LightItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-LightItalic.otf") format("opentype"), url("dist/fonts/Rubik-LightItalic.svg") format("svg"), url("dist/fonts/Rubik-LightItalic.ttf") format("truetype"), url("dist/fonts/Rubik-LightItalic.woff") format("woff"), url("dist/fonts/Rubik-LightItalic.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: italic;
+  font-weight: 400;
+  src: local('Rubik Italic'), local('Rubik-Italic'), url("dist/fonts/Rubik-Italic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Italic.otf") format("opentype"), url("dist/fonts/Rubik-Italic.svg") format("svg"), url("dist/fonts/Rubik-Italic.ttf") format("truetype"), url("dist/fonts/Rubik-Italic.woff") format("woff"), url("dist/fonts/Rubik-Italic.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: italic;
+  font-weight: 500;
+  src: local('Rubik Medium Italic'), local('Rubik-MediumItalic'), url("dist/fonts/Rubik-MediumItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-MediumItalic.otf") format("opentype"), url("dist/fonts/Rubik-MediumItalic.svg") format("svg"), url("dist/fonts/Rubik-MediumItalic.ttf") format("truetype"), url("dist/fonts/Rubik-MediumItalic.woff") format("woff"), url("dist/fonts/Rubik-MediumItalic.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: italic;
+  font-weight: 700;
+  src: local('Rubik Bold Italic'), local('Rubik-BoldItalic'), url("dist/fonts/Rubik-BoldItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-BoldItalic.otf") format("opentype"), url("dist/fonts/Rubik-BoldItalic.svg") format("svg"), url("dist/fonts/Rubik-BoldItalic.ttf") format("truetype"), url("dist/fonts/Rubik-BoldItalic.woff") format("woff"), url("dist/fonts/Rubik-BoldItalic.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: italic;
+  font-weight: 900;
+  src: local('Rubik Black Italic'), local('Rubik-BlackItalic'), url("dist/fonts/Rubik-BlackItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-BlackItalic.otf") format("opentype"), url("dist/fonts/Rubik-BlackItalic.svg") format("svg"), url("dist/fonts/Rubik-BlackItalic.ttf") format("truetype"), url("dist/fonts/Rubik-BlackItalic.woff") format("woff"), url("dist/fonts/Rubik-BlackItalic.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 300;
+  src: local('Rubik Light'), local('Rubik-Light'), url("dist/fonts/Rubik-Light.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Light.otf") format("opentype"), url("dist/fonts/Rubik-Light.svg") format("svg"), url("dist/fonts/Rubik-Light.ttf") format("truetype"), url("dist/fonts/Rubik-Light.woff") format("woff"), url("dist/fonts/Rubik-Light.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Rubik'), local('Rubik-Regular'), url("dist/fonts/Rubik-Regular.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Regular.otf") format("opentype"), url("dist/fonts/Rubik-Regular.svg") format("svg"), url("dist/fonts/Rubik-Regular.ttf") format("truetype"), url("dist/fonts/Rubik-Regular.woff") format("woff"), url("dist/fonts/Rubik-Regular.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 500;
+  src: local('Rubik Medium'), local('Rubik-Medium'), url("dist/fonts/Rubik-Medium.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Medium.otf") format("opentype"), url("dist/fonts/Rubik-Medium.svg") format("svg"), url("dist/fonts/Rubik-Medium.ttf") format("truetype"), url("dist/fonts/Rubik-Medium.woff") format("woff"), url("dist/fonts/Rubik-Medium.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 700;
+  src: local('Rubik Bold'), local('Rubik-Bold'), url("dist/fonts/Rubik-Bold.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Bold.otf") format("opentype"), url("dist/fonts/Rubik-Bold.svg") format("svg"), url("dist/fonts/Rubik-Bold.ttf") format("truetype"), url("dist/fonts/Rubik-Bold.woff") format("woff"), url("dist/fonts/Rubik-Bold.woff2") format("woff2");
+}
+@font-face {
+  font-family: 'Rubik';
+  font-style: normal;
+  font-weight: 900;
+  src: local('Rubik Black'), local('Rubik-Black'), url("dist/fonts/Rubik-Black.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Black.otf") format("opentype"), url("dist/fonts/Rubik-Black.svg") format("svg"), url("dist/fonts/Rubik-Black.ttf") format("truetype"), url("dist/fonts/Rubik-Black.woff") format("woff"), url("dist/fonts/Rubik-Black.woff2") format("woff2");
+}
 body {
   font-family: 'Rubik';
   font-size: 26px;
