--- a/index.html
+++ b/index.html
@@ -81,73 +81,65 @@
   font-family: 'Rubik';
   font-style: italic;
   font-weight: 300;
-  src: local('Rubik Light Italic'), local('Rubik-LightItalic'), url("dist/fonts/Rubik-LightItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-LightItalic.otf") format("opentype"), url("dist/fonts/Rubik-LightItalic.svg") format("svg"), url("dist/fonts/Rubik-LightItalic.ttf") format("truetype"), url("dist/fonts/Rubik-LightItalic.woff") format("woff"), url("dist/fonts/Rubik-LightItalic.woff2") format("woff2");
+  src: local('Rubik Light Italic'), local('Rubik-LightItalic'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-LightItalic.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-LightItalic.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-LightItalic.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-LightItalic.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-LightItalic.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-LightItalic.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: italic;
   font-weight: 400;
-  src: local('Rubik Italic'), local('Rubik-Italic'), url("dist/fonts/Rubik-Italic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Italic.otf") format("opentype"), url("dist/fonts/Rubik-Italic.svg") format("svg"), url("dist/fonts/Rubik-Italic.ttf") format("truetype"), url("dist/fonts/Rubik-Italic.woff") format("woff"), url("dist/fonts/Rubik-Italic.woff2") format("woff2");
+  src: local('Rubik Italic'), local('Rubik-Italic'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Italic.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Italic.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Italic.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Italic.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Italic.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Italic.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: italic;
   font-weight: 500;
-  src: local('Rubik Medium Italic'), local('Rubik-MediumItalic'), url("dist/fonts/Rubik-MediumItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-MediumItalic.otf") format("opentype"), url("dist/fonts/Rubik-MediumItalic.svg") format("svg"), url("dist/fonts/Rubik-MediumItalic.ttf") format("truetype"), url("dist/fonts/Rubik-MediumItalic.woff") format("woff"), url("dist/fonts/Rubik-MediumItalic.woff2") format("woff2");
+  src: local('Rubik Medium Italic'), local('Rubik-MediumItalic'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-MediumItalic.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-MediumItalic.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-MediumItalic.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-MediumItalic.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-MediumItalic.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-MediumItalic.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: italic;
   font-weight: 700;
-  src: local('Rubik Bold Italic'), local('Rubik-BoldItalic'), url("dist/fonts/Rubik-BoldItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-BoldItalic.otf") format("opentype"), url("dist/fonts/Rubik-BoldItalic.svg") format("svg"), url("dist/fonts/Rubik-BoldItalic.ttf") format("truetype"), url("dist/fonts/Rubik-BoldItalic.woff") format("woff"), url("dist/fonts/Rubik-BoldItalic.woff2") format("woff2");
+  src: local('Rubik Bold Italic'), local('Rubik-BoldItalic'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BoldItalic.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BoldItalic.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BoldItalic.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BoldItalic.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BoldItalic.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BoldItalic.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: italic;
   font-weight: 900;
-  src: local('Rubik Black Italic'), local('Rubik-BlackItalic'), url("dist/fonts/Rubik-BlackItalic.eot") format("embedded-opentype"), url("dist/fonts/Rubik-BlackItalic.otf") format("opentype"), url("dist/fonts/Rubik-BlackItalic.svg") format("svg"), url("dist/fonts/Rubik-BlackItalic.ttf") format("truetype"), url("dist/fonts/Rubik-BlackItalic.woff") format("woff"), url("dist/fonts/Rubik-BlackItalic.woff2") format("woff2");
+  src: local('Rubik Black Italic'), local('Rubik-BlackItalic'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BlackItalic.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BlackItalic.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BlackItalic.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BlackItalic.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BlackItalic.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-BlackItalic.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 300;
-  src: local('Rubik Light'), local('Rubik-Light'), url("dist/fonts/Rubik-Light.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Light.otf") format("opentype"), url("dist/fonts/Rubik-Light.svg") format("svg"), url("dist/fonts/Rubik-Light.ttf") format("truetype"), url("dist/fonts/Rubik-Light.woff") format("woff"), url("dist/fonts/Rubik-Light.woff2") format("woff2");
+  src: local('Rubik Light'), local('Rubik-Light'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Light.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Light.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Light.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Light.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Light.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Light.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 400;
-  src: local('Rubik'), local('Rubik-Regular'), url("dist/fonts/Rubik-Regular.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Regular.otf") format("opentype"), url("dist/fonts/Rubik-Regular.svg") format("svg"), url("dist/fonts/Rubik-Regular.ttf") format("truetype"), url("dist/fonts/Rubik-Regular.woff") format("woff"), url("dist/fonts/Rubik-Regular.woff2") format("woff2");
+  src: local('Rubik'), local('Rubik-Regular'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Regular.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Regular.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Regular.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Regular.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Regular.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Regular.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 500;
-  src: local('Rubik Medium'), local('Rubik-Medium'), url("dist/fonts/Rubik-Medium.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Medium.otf") format("opentype"), url("dist/fonts/Rubik-Medium.svg") format("svg"), url("dist/fonts/Rubik-Medium.ttf") format("truetype"), url("dist/fonts/Rubik-Medium.woff") format("woff"), url("dist/fonts/Rubik-Medium.woff2") format("woff2");
+  src: local('Rubik Medium'), local('Rubik-Medium'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Medium.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Medium.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Medium.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Medium.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Medium.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Medium.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 700;
-  src: local('Rubik Bold'), local('Rubik-Bold'), url("dist/fonts/Rubik-Bold.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Bold.otf") format("opentype"), url("dist/fonts/Rubik-Bold.svg") format("svg"), url("dist/fonts/Rubik-Bold.ttf") format("truetype"), url("dist/fonts/Rubik-Bold.woff") format("woff"), url("dist/fonts/Rubik-Bold.woff2") format("woff2");
+  src: local('Rubik Bold'), local('Rubik-Bold'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Bold.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Bold.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Bold.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Bold.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Bold.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Bold.woff2") format("woff2");
 }
 @font-face {
   font-family: 'Rubik';
   font-style: normal;
   font-weight: 900;
-  src: local('Rubik Black'), local('Rubik-Black'), url("dist/fonts/Rubik-Black.eot") format("embedded-opentype"), url("dist/fonts/Rubik-Black.otf") format("opentype"), url("dist/fonts/Rubik-Black.svg") format("svg"), url("dist/fonts/Rubik-Black.ttf") format("truetype"), url("dist/fonts/Rubik-Black.woff") format("woff"), url("dist/fonts/Rubik-Black.woff2") format("woff2");
+  src: local('Rubik Black'), local('Rubik-Black'), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Black.eot") format("embedded-opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Black.otf") format("opentype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Black.svg") format("svg"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Black.ttf") format("truetype"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Black.woff") format("woff"), url("https://nice-studio.github.io/Rubik/dist/fonts/Rubik-Black.woff2") format("woff2");
 }
 body {
   font-family: 'Rubik';
   font-size: 26px;
-}
-.italic-100 {
-  font-weight: 100;
-  font-style: italic;
-}
-.italic-200 {
-  font-weight: 200;
-  font-style: italic;
 }
 .italic-300 {
   font-weight: 300;
@@ -177,13 +169,65 @@ body {
   font-weight: 900;
   font-style: italic;
 }
-.normal-100 {
-  font-weight: 100;
-  font-style: normal;
+.italic-400 {
+  font-weight: 400;
+  font-style: italic;
 }
-.normal-200 {
-  font-weight: 200;
-  font-style: normal;
+.italic-500 {
+  font-weight: 500;
+  font-style: italic;
+}
+.italic-600 {
+  font-weight: 600;
+  font-style: italic;
+}
+.italic-700 {
+  font-weight: 700;
+  font-style: italic;
+}
+.italic-800 {
+  font-weight: 800;
+  font-style: italic;
+}
+.italic-900 {
+  font-weight: 900;
+  font-style: italic;
+}
+.italic-500 {
+  font-weight: 500;
+  font-style: italic;
+}
+.italic-600 {
+  font-weight: 600;
+  font-style: italic;
+}
+.italic-700 {
+  font-weight: 700;
+  font-style: italic;
+}
+.italic-800 {
+  font-weight: 800;
+  font-style: italic;
+}
+.italic-900 {
+  font-weight: 900;
+  font-style: italic;
+}
+.italic-700 {
+  font-weight: 700;
+  font-style: italic;
+}
+.italic-800 {
+  font-weight: 800;
+  font-style: italic;
+}
+.italic-900 {
+  font-weight: 900;
+  font-style: italic;
+}
+.italic-900 {
+  font-weight: 900;
+  font-style: italic;
 }
 .normal-300 {
   font-weight: 300;
@@ -207,6 +251,66 @@ body {
 }
 .normal-800 {
   font-weight: 800;
+  font-style: normal;
+}
+.normal-900 {
+  font-weight: 900;
+  font-style: normal;
+}
+.normal-400 {
+  font-weight: 400;
+  font-style: normal;
+}
+.normal-500 {
+  font-weight: 500;
+  font-style: normal;
+}
+.normal-600 {
+  font-weight: 600;
+  font-style: normal;
+}
+.normal-700 {
+  font-weight: 700;
+  font-style: normal;
+}
+.normal-800 {
+  font-weight: 800;
+  font-style: normal;
+}
+.normal-900 {
+  font-weight: 900;
+  font-style: normal;
+}
+.normal-500 {
+  font-weight: 500;
+  font-style: normal;
+}
+.normal-600 {
+  font-weight: 600;
+  font-style: normal;
+}
+.normal-700 {
+  font-weight: 700;
+  font-style: normal;
+}
+.normal-800 {
+  font-weight: 800;
+  font-style: normal;
+}
+.normal-900 {
+  font-weight: 900;
+  font-style: normal;
+}
+.normal-700 {
+  font-weight: 700;
+  font-style: normal;
+}
+.normal-800 {
+  font-weight: 800;
+  font-style: normal;
+}
+.normal-900 {
+  font-weight: 900;
   font-style: normal;
 }
 .normal-900 {
